--- a/manifests.json
+++ b/manifests.json
@@ -1006,6 +1006,12 @@
           "@type": "sc:Manifest",
           "label": "Degraded flow test for AV - Video",
           "visible": true
+        },
+        {
+          "@id": "https://iiifauth.digtest.co.uk/manifest/31_adaptive_audio",
+          "@type": "sc:Manifest",
+          "label": "Adaptive audio auth",
+          "visible": true
         }
       ]
     },
