--- a/manifests.json
+++ b/manifests.json
@@ -345,14 +345,24 @@
           "label": "Brain (dicom)"
         },
         {
+          "@id": "https://ami-test-manifests.netlify.com/collection/stl/brain/index.json",
+          "@type": "sc:Manifest",
+          "label": "Brain (stl)"
+        },
+        {
           "@id": "https://ami-test-manifests.netlify.com/collection/dicom/platypus/platypus-jpeg2000-16bit-20/index.json",
           "@type": "sc:Manifest",
           "label": "Platypus (dicom jpeg2000 16bit)"
         },
         {
-          "@id": "https://ami-test-manifests.netlify.com/collection/stl/brain/index.json",
+          "@id": "https://ami-test-manifests.netlify.com/collection/dicom/elephant/elephant-jpeg2000-16bit-20/index.json",
           "@type": "sc:Manifest",
-          "label": "Brain (stl)"
+          "label": "Elephant (dicom jpeg2000 16bit)"
+        },
+        {
+          "@id": "https://ami-test-manifests.netlify.com/collection/dicom/bat/bat-jpeg2000-16bit-20/index.json",
+          "@type": "sc:Manifest",
+          "label": "Bat (dicom jpeg2000 16bit)"
         }
       ]
     },
