--- a/examples-config.json
+++ b/examples-config.json
@@ -19,6 +19,11 @@
       "options": {
         "autoHideControls": false
       }
+    },
+    "footerPanel": {
+      "options":{
+        "downloadEnabled": true
+      }
     }
   }
 }
