--- a/manifests.json
+++ b/manifests.json
@@ -335,6 +335,21 @@
       "label": "Aleph",
       "manifests": [
         {
+          "@id": "https://nomad-project.co.uk/objects/collection/toy-lion/index.json",
+          "@type": "sc:Manifest",
+          "label": "Lion (gltf)"
+        },
+        {
+          "@id": "https://nomad-project.co.uk/objects/collection/woven-bowl/index.json",
+          "@type": "sc:Manifest",
+          "label": "Bowl (gltf)"
+        },
+        {
+          "@id": "https://www.morphosource.org/media/morphosource/dcm_sample/ptilocercus/dcm_multi_vf300_jpegQ95_16bit_allslices.json",
+          "@type": "sc:Manifest",
+          "label": "Tree Shrew (dicom)"
+        },
+        {
           "@id": "https://ami-test-manifests.netlify.com/collection/dicom/brain/index.json",
           "@type": "sc:Manifest",
           "label": "Brain (dicom)"
@@ -349,11 +364,6 @@
           "@type": "sc:Manifest",
           "label": "Elephant (dicom)",
           "visible": false
-        },
-        {
-          "@id": "https://nomad-project.co.uk/objects/collection/woven-bowl/index.json",
-          "@type": "sc:Manifest",
-          "label": "Bowl"
         }
       ]
     },
