--- a/examples-config.json
+++ b/examples-config.json
@@ -15,7 +15,7 @@
         "localeToggleEnabled": false
       }
     },
-    "seadragonCenterPanel": {
+    "openSeadragonCenterPanel": {
       "options": {
         "autoHideControls": false
       }
