--- a/manifests.json
+++ b/manifests.json
@@ -1072,6 +1072,12 @@
           "@type": "sc:Manifest",
           "label": "Moby Dick (epub)",
           "visible": true
+        },
+        {
+          "@id": "https://ebook-test-manifests.netlify.com/collection/cole-voyage-of-life/index.json",
+          "@type": "sc:Manifest",
+          "label": "Voyage of Life (epub)",
+          "visible": true
         }
       ]
     },
